--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,12 @@
 .container {
     width: 100vw;
     height: 100vh;
+    background-color: #000;
     display: flex;
     justify-content: center;
+    text-align: center;
     align-items: center;
 }
 #canvas {
-    background-color: #000;
+    background: #000;
 }
